--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -81,7 +81,7 @@
         <h1 style="text-align: center;color: rgb(216, 22, 59);"><strong>Yoga Teacher Training Online</strong></h1>
         <p style="text-align: center;color: rgb(255,255,255);"><strong>300hrs Certificated - Online and Interactive - Yoga Alliance Accredited</strong><br></p>
     </div>
-    <div class="container center-block"></div><img class="center-block" src="https://res.cloudinary.com/shamayoga/image/upload/v1609935864/300yoga.png">
+    <div class="container center-block"><img class="center-block" src="https://res.cloudinary.com/shamayoga/image/upload/w_800/v1609935864/300yoga.png"></div>
     <div class="container" style="font-size: 24px;">
         <h1 style="text-align: center;">Take your love for yoga to the next level</h1>
         <p style="font-size: 24px;">Our direct and practical online training is designed to help you develop as a professional yoga teacher and expand your teaching repertoire.&nbsp;Set the pace of your own learning and integrate the content with your home practice and teaching sessions.</p>
