--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -82,12 +82,12 @@
         <p style="text-align: center;color: rgb(255,255,255);"><strong>300hrs Certificated - Online and Interactive - Yoga Alliance Accredited</strong><br></p>
     </div>
     <div class="container"><img class="center-block" src="https://res.cloudinary.com/shamayoga/image/upload/w_800/v1609935864/300yoga.png"></div>
-    <div class="container 300yt-font-size">
+    <div class="container yto-font-size">
         <h1 style="text-align: center;">Take your love for yoga to the next level</h1>
-        <p class="300yt-font-size">Our direct and practical online training is designed to help you develop as a professional yoga teacher and expand your teaching repertoire.&nbsp;Set the pace of your own learning and integrate the content with your home practice and teaching sessions.</p>
+        <p class="yto-font-size">Our direct and practical online training is designed to help you develop as a professional yoga teacher and expand your teaching repertoire.&nbsp;Set the pace of your own learning and integrate the content with your home practice and teaching sessions.</p>
     </div>
-    <div class="container center-block 300yt-font-size">
-        <h1 style="text-align:center;"><strong>8 study categories presented in 12 modules</strong></h1><ol class="300yt-font-size">
+    <div class="container center-block yto-font-size">
+        <h1 style="text-align:center;"><strong>8 study categories presented in 12 modules</strong></h1><ol class="yto-font-size">
     <li><strong>Hatha Yoga Pradipika:</strong> In theory and practice, the foundational text and transcendent teachings of the HYP – the authentic, traditional Hatha Yoga style</li>
     <li><strong>Mind Keys:</strong> A fascinating exploration of yoga techniques, mindfulness and self-hypnosis.  Discover tools to master your subconscious mind.</li>
     <li><strong>Six Namaskars:</strong> Original yoga dances, flowing sequenced movements and postures to integrate mind, body, feeling and breath.  Accessible to all, dance becomes yoga and yoga becomes dance. Meditations in movement.</li>
@@ -100,7 +100,7 @@
     </div>
     <div class="container">
         <h1 class="text-center"><strong>In our self-paced, interactive yoga learning portal you will find</strong></h1>
-        <ul class="300yt-font-size">
+        <ul class="yto-font-size">
             <li>Pre-recorded videos: practices and lectures with expert tuition and demonstration</li>
             <li>Audios: guided relaxations, meditations, mantras, and recorded yoga texts with commentaries</li>
             <li>Course notes including supporting references</li>
@@ -108,11 +108,11 @@
             <li>Quizzes and activities, digitalised, state-of-the-art tools for individual feedback</li>
             <li>Monthly Zoom (2 hours+) session, to connect with the Lead Trainers on completion of each Module, for practical assessments, Q&amp;A and small group coaching</li>
         </ul><center><img class="img-responsive" src="https://res.cloudinary.com/shamayoga/image/upload/v1609948925/300time.svg"></center>
-        <p class="lead text-center 300yt-font-size"><em>You can use any device to access our user-friendly yoga learning portal, including smartphone, tablet, laptop or desktop computer.&nbsp;&nbsp;Enjoy lifetime access to the course content.</em><br></p>
+        <p class="lead text-center yto-font-size"><em>You can use any device to access our user-friendly yoga learning portal, including smartphone, tablet, laptop or desktop computer.&nbsp;&nbsp;Enjoy lifetime access to the course content.</em><br></p>
     </div>
     <div class="container">
         <h1 class="text-center text-danger"><strong>Bonuses </strong>*over £300 value – Free!*</h1>
-        <ul class="300yt-font-size">
+        <ul class="yto-font-size">
             <li>Free access to extra Shamayoga classes, podcasts, workshops, and webinars<strong><em>.</em></strong></li>
             <li>A downloadable, original, royalty-free, ambient music album creating the perfect atmosphere for your yoga practice or teaching session.</li>
             <li>Handy links to online resources</li>
@@ -120,20 +120,20 @@
     </div>
     <div class="container">
         <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong>Forever Support from our Community</strong></h1>
-        <p class="300yt-font-size">You can join our exclusive Shamayoga YA300 Facebook support community and connect with other students.&nbsp; Yoga is more than a practice. It’s a way of life and we are with you all the way.</p>
+        <p class="yto-font-size">You can join our exclusive Shamayoga YA300 Facebook support community and connect with other students.&nbsp; Yoga is more than a practice. It’s a way of life and we are with you all the way.</p>
     </div>
     <div class="container">
         <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong>Who is Shamayoga certificated 300 hrs online Yoga Teacher Training for?&nbsp;</strong><br></h1>
-        <ul class="sychunky 300yt-font-size">
+        <ul class="sychunky yto-font-size">
             <li><strong>200 hrs yoga teachers</strong>. On completion you will be able to apply for Yoga Alliance for 500 RYT (200 + 300 hrs).&nbsp;</li>
             <li><strong>Experienced yoga practitioners</strong>, including those who do not necessarily wish to teach.&nbsp;&nbsp;</li>
             <li><strong>Qualified holistic arts practitioners who are also experienced yoga practitioners</strong> including pilates, dance and martial arts.</li>
         </ul>
         <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong><em>Whatever your yoga style and previous training, you are warmly welcomed</em></strong><em>.</em><br></h1>
-        <p class="300yt-font-size">Complete the course within 12 months or take up to 3 years!&nbsp;<br></p>
-        <p class="300yt-font-size">You will have instant access to the training upon purchase, so you may start immediately.&nbsp; Just login to our learning portal and go to step one on the training spiral.<br></p>
-        <p class="300yt-font-size">Set the pace of your own learning by progressing stepwise through the 12 modules of our training spiral. Each module of approximately 25 hours is divided into 8 study categories.<br></p>
-        <p class="300yt-font-size">300 hours Yoga Alliance certification is awarded upon completion.<br></p>
+        <p class="yto-font-size">Complete the course within 12 months or take up to 3 years!&nbsp;<br></p>
+        <p class="yto-font-size">You will have instant access to the training upon purchase, so you may start immediately.&nbsp; Just login to our learning portal and go to step one on the training spiral.<br></p>
+        <p class="yto-font-size">Set the pace of your own learning by progressing stepwise through the 12 modules of our training spiral. Each module of approximately 25 hours is divided into 8 study categories.<br></p>
+        <p class="yto-font-size">300 hours Yoga Alliance certification is awarded upon completion.<br></p>
     </div>
     <div class="container">
         <p>Tuition fees:&nbsp; <strong>£900</strong> if paid in full<strong>£1060</strong> if paid in 4 scheduled instalments of <strong>£265 </strong>every two months<br><strong>ButtonBook your place</strong><br><strong>Lead Trainer Bios: Steve Avian </strong>(click here) and <strong>Susan McHale </strong>(click here)<br><strong>See Terms and Conditions here</strong>*GDPR*<br></p>
