Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -12,7 +12,7 @@
 <meta content="Teacher Training at Shamayoga" property="og:title">
 <meta content="" property="og:description">
 <link href="https://fonts.googleapis.com/css?family=Skranji:400,700" rel="stylesheet"> 
-<link rel="stylesheet" href="https://www.shamayoga.org.uk/css/styles.css">
+<link rel="stylesheet" href="https://www.shamayoga.org.uk/css/styles.css?32">
 </head>
 
 <body class="teacher-training">
