Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -136,7 +136,7 @@
         <p class="yto-font-size">300 hours Yoga Alliance certification is awarded upon completion.<br></p>
     </div>
     <div class="container">
-        <p>Tuition fees:&nbsp; <strong>£900</strong> if paid in full<strong>£1060</strong> if paid in 4 scheduled instalments of <strong>£265 </strong>every two months<br><strong>ButtonBook your place</strong><br><strong>Lead Trainer Bios: Steve Avian </strong>(click here) and <strong>Susan McHale </strong>(click here)<br><strong>See Terms and Conditions here</strong>*GDPR*<br></p>
+        <p class="yto-font-size">Tuition fees:&nbsp; <strong>£900</strong><br><strong>Lead Trainer Bios: Steve Avian </strong>(click here) and <strong>Susan McHale </strong>(click here)<br><strong>See Terms and Conditions here</strong>*GDPR*<br></p>
     </div>
     
     
