text change in 404 page

--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@ layout: page
 
 <div class="container">
   <h1>NAMASTE </h1>
-  <h2>error 404</h2>
+  <h2>oops looks like an error 404</h2>
 
   <p>The requested page could not be found. :(</p>
 </div>
