drop shadpw on heading

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -48,7 +48,7 @@
     <div class="post hentry">
         <div class="jumbotron center-block" style="background: url(&quot;https://res.cloudinary.com/shamayoga/image/upload/v1531297422/shamayoga.org.uk/bluebackground.gif&quot;) no-repeat;background-size: cover;">
         <p style="text-align: center;font-family: &quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color: rgb(255,255,255);">Join us on a transformational learning adventure</p>
-        <h1 style="text-align: center;color: rgb(216, 22, 59);"><strong>Yoga Teacher Training Online</strong></h1>
+        <h1 style="text-align: center;color: rgb(216, 22, 59);text-shadow: 2px 2px #fff;"><strong>Yoga Teacher Training Online</strong></h1>
         <p style="text-align: center;color: rgb(255,255,255);"><strong>300hrs Certificated - Online and Interactive - Yoga Alliance Accredited</strong><br></p>
     </div>
     <div class="container centre-block"><img src="https://res.cloudinary.com/shamayoga/image/upload/w_800/v1609935864/300yoga.png"></div>
