--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -107,7 +107,7 @@
         <p class="yto-font-size">300 hours Yoga Alliance certification is awarded upon completion.<br></p>
     </div>
     <div class="container">
-        <p class="yto-font-size">Tuition fees:&nbsp; <strong>£900</strong><br><strong>Lead Trainer Bios: Steve Avian </strong>(click here) and <strong>Susan McHale </strong>(click here)<br><strong>See Terms and Conditions here</strong>*GDPR*<br></p>
+        <p class="yto-font-size">Tuition fees:&nbsp; <strong class="yto-font-size" style="color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;">£900</strong><br><strong>Lead Trainer Bios: Steve Avian </strong>(click here) and <strong>Susan McHale </strong>(click here)<br><strong>See Terms and Conditions here</strong>*GDPR*<br></p>
     </div>
     
     
