--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -122,9 +122,9 @@ delivered with his quiet, wry sense of humour.” Karen Myers 2020</blockquote>
       <blockquote class="blockquote">“Steve, I have really enjoyed working with you and loved your openness. Your attitude has been very motivating, always. You teach both physical and spiritual yoga, always inviting us to explore more.  I have been very blessed to train under your guidance. Everything is deeply appreciated.” Monica 2020</blockquote>
       <blockquote class="blockquote">“Thank you for everything - it has been such a wonderful journey that I am so glad I embarked on!”  Anna 2020</blockquote>
     </div>
-    <div class="container">
+    <div class="container" style="max-width:600px;text-align:center;">
         <p class="yto-font-size">Tuition fees:&nbsp; <strong class="yto-font-size" style="color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;">£900</strong><br></p>
-        <p>If you choose to pay using paypal you could take advantage of PayPal Credit offers which allow you to pay in installments while accessing the course from day 1.</p>
+        <p>Look out for the "PayPal Credit" offers which allow you to delay payment while accessing the course from day 1.</p>
         <p><div id="smart-button-container">
       <div style="text-align: center;">
         <div id="paypal-button-container"></div>
@@ -163,7 +163,6 @@ delivered with his quiet, wry sense of humour.” Karen Myers 2020</blockquote>
   </script></p>
 
     </div>
-    
     
 </div>
     </div>
