Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -49,13 +49,15 @@
         <div class="jumbotron center-block" style="background: url(&quot;https://res.cloudinary.com/shamayoga/image/upload/v1531297422/shamayoga.org.uk/bluebackground.gif&quot;) no-repeat;background-size: cover;">
         <p style="text-align: center;font-family: &quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color: rgb(255,255,255);">Join us on a transformational learning adventure</p>
         <h1 style="text-align: center;color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;"><strong>Yoga Teacher Training Online</strong></h1>
+        <center><img src="https://res.cloudinary.com/shamayoga/image/upload/w_140/v1613651866/oycp.png"></center>
         <p style="text-align: center;color: rgb(255,255,255);"><strong>300hrs Certificated - Online and Interactive - Yoga Alliance Accredited</strong><br></p>
     </div>
-    <div class="container centre-block"><img src="https://res.cloudinary.com/shamayoga/image/upload/w_800/v1609935864/300yoga.png"></div>
+    
     <div class="container yto-font-size">
         <h1 style="text-align: center;">Take your love for yoga to the next level</h1>
         <p class="yto-font-size">Our direct and practical online training is designed to help you develop as a professional yoga teacher and expand your teaching repertoire.&nbsp;Set the pace of your own learning and integrate the content with your home practice and teaching sessions.</p>
     </div>
+    <div class="container centre-block"><img src="https://res.cloudinary.com/shamayoga/image/upload/w_800/v1609935864/300yoga.png"></div>
     <div class="container center-block yto-font-size">
     <h1 style="text-align:center;"><strong>8 study categories presented in 12 modules</strong></h1>
         <ol class="yto-font-size">
