Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -57,7 +57,7 @@
         <h1 style="text-align: center;">Take your love for yoga to the next level</h1>
         <p class="yto-font-size">Our direct and practical online training is designed to help you develop as a professional yoga teacher and expand your teaching repertoire.&nbsp;Set the pace of your own learning and integrate the content with your home practice and teaching sessions.</p>
     </div>
-    <div class="container centre-block"><img src="https://res.cloudinary.com/shamayoga/image/upload/w_800/v1609935864/300yoga.png"></div>
+    <div class="container centre-block"><img src="https://res.cloudinary.com/shamayoga/image/upload/v1613653516/trio-1.png"></div>
     <div class="container center-block yto-font-size">
     <h1 style="text-align:center;"><strong>8 study categories presented in 12 modules</strong></h1>
         <ol class="yto-font-size">
@@ -82,6 +82,10 @@
             <li>Monthly Zoom (2 hours+) session, to connect with the Lead Trainers on completion of each Module, for practical assessments, Q&amp;A and small group coaching</li>
         </ul><center><img class="img-responsive" src="https://res.cloudinary.com/shamayoga/image/upload/v1609948925/300time.svg"></center>
         <p class="lead text-center yto-font-size"><em>You can use any device to access our user-friendly yoga learning portal, including smartphone, tablet, laptop or desktop computer.&nbsp;&nbsp;Enjoy lifetime access to the course content.</em><br></p>
+    </div>
+    <div class="container">
+      <img src="https://res.cloudinary.com/shamayoga/image/upload/v1613658982/trio-2.jpg"/>
+      
     </div>
     <div class="container">
         <h1 class="text-center text-danger"><strong>Bonuses </strong>*over £300 value – Free!*</h1>
