--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -43,7 +43,7 @@
     <div class="content-header">
     <h1>
     <a class="btn btn-default fa fa-bars" href="#" id="menu-toggle"><i class="icon-reorder"></i></a>
-    
+    <img class="photo-right" src="https://lh3.googleusercontent.com/ZzwfefdlIi4WI08MH4sg-nh4UPhy5VKNGz9pRqT0v3XlRZ3Wjex6vYBgXOBhhzTwSTp-Df8and-_-WMGoQ=s400-e30">
     </h1>
     </div>
 <div class="page-content inset">
