--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -55,8 +55,8 @@
         <div class="jumbotron center-block" style="background: url(&quot;https://res.cloudinary.com/shamayoga/image/upload/v1531297422/shamayoga.org.uk/bluebackground.gif&quot;) no-repeat;background-size: cover;">
         <p style="text-align: center;font-family: &quot;Helvetica Neue&quot;,Helvetica,Arial,sans-serif;color: rgb(255,255,255);">Join us on a transformational learning adventure</p>
         <h1 style="text-align: center;color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;"><strong>Yoga Teacher Training Online</strong></h1>
-        <center><img src="https://res.cloudinary.com/shamayoga/image/upload/w_140/v1613651866/oycp.png"></center>
-        <p style="text-align: center;color: rgb(255,255,255);"><strong>300hrs Certificated - Online and Interactive - Yoga Alliance Accredited</strong><br></p>
+        <center><img style="padding-bottom:30px;" src="https://res.cloudinary.com/shamayoga/image/upload/w_140/v1613651866/oycp.png"></center>
+        <p style="text-align: center;color: rgb(255,255,255);"><strong>300hrs Certificated - Online and Interactive - World Yoga Alliance Accredited</strong><br></p>
     </div>
     
     <div class="container yto-font-size">
@@ -66,7 +66,7 @@
     <div class="container centre-block"><img src="https://res.cloudinary.com/shamayoga/image/upload/v1613653516/trio-1.png"></div>
     <div class="container center-block yto-font-size">
     <h1 style="text-align:center;"><strong>8 study categories presented in 12 modules</strong></h1>
-        <ol class="yto-font-size">
+        <ol class="yto-font-size categories-list" style="padding-bottom: ">
             <li><strong>Hatha Yoga Pradipika:</strong> In theory and practice, the foundational text and transcendent teachings of the HYP – the authentic, traditional Hatha Yoga style</li>
             <li><strong>Mind Keys:</strong> A fascinating exploration of yoga techniques, mindfulness and self-hypnosis.  Discover tools to master your subconscious mind.</li>
             <li><strong>Six Namaskars:</strong> Original yoga dances, flowing sequenced movements and postures to integrate mind, body, feeling and breath.  Accessible to all, dance becomes yoga and yoga becomes dance. Meditations in movement.</li>
