Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -68,17 +68,17 @@
     <h1 style="text-align:center;"><strong>8 study categories presented in 12 modules</strong></h1>
         <ol class="yto-font-size categories-list" style="padding-bottom: ">
             <li><strong>Hatha Yoga Pradipika:</strong> In theory and practice, the foundational text and transcendent teachings of the HYP – the authentic, traditional Hatha Yoga style</li>
-            <li><strong>Mind Keys:</strong> A fascinating exploration of yoga techniques, mindfulness and self-hypnosis.  Discover tools to master your subconscious mind.</li>
+            <li><strong>Mind Keys:</strong> A fascinating exploration of yoga techniques, mantra, mindfulness and self-hypnosis.  Discover tools to master your subconscious mind.</li>
             <li><strong>Six Namaskars:</strong> Original yoga dances, flowing sequenced movements and postures to integrate mind, body, feeling and breath.  Accessible to all, dance becomes yoga and yoga becomes dance. Meditations in movement.</li>
             <li><strong>Anatomy &amp; Physiology - Integrated Body Systems:</strong> Cutting edge approach to transform your yoga practice and your understanding of the body and mind.  Covers 12 body systems, including the fascial communication system and tensegrity model, and applied polyvagal theory.</li>
-            <li><strong>Subtle Yoga &amp; Meditation :</strong> Deepen your awareness of subtle, pranic energy. Cultivate and unfold the extraordinary yogic potentials. Learn about your energetic anatomy - chakras, nadis, koshas, vayus, aura. Explore energy circulation, breath awareness and third eye meditations and so much more.</li>
-            <li><strong>Teaching Skills:</strong> Transform knowledge into experience. Teach asanas safely, including adjustments, timing, transitioning, counterposing, sequencing, contraindications and adaptations. Design and sequence your own classes, workshops and retreats. Explore varying styles and methods of teaching, including a therapeutic framework for teaching yoga one to one. Become a versatile teacher and learn online yoga teaching skills for the 21<sup>st</sup>century.</li>
+            <li><strong>Subtle Yoga &amp; Meditation :</strong> Deepen your awareness of pranic energy. Cultivate and unfold the extraordinary yogic potentials. Learn about your energetic anatomy - chakras, nadis, koshas, vayus, aura. Explore energy circulation, breath awareness and third eye meditations and so much more.</li>
+            <li><strong>Teaching Skills:</strong> Transform knowledge into experience. Teach asanas safely, including adjustments and use of props, timing, transitioning, counterposing, sequencing, contraindications, benefits and adaptations. Design and sequence your own classes, workshops and retreats. Explore varying styles and methods of teaching, including a therapeutic framework for teaching yoga one to one. Become a versatile teacher and learn online yoga teaching skills for the 21<sup>st</sup> century.</li>
             <li><strong>Yoga Philosophy – Ancient, Medieval and Modern:</strong> Insights into the primary influences at play in Hatha Yoga from Vedic times to Patanjali - Samkhya, Yoga, Tantra, - summed up in Medieval texts such as the Hatha Yoga Pradipika, Shiva Samhita and Gherandha Samhita.  Explore contemporary yoga systems, their pioneers and innovators, in relation to the traditions of the past.</li>
-            <li><strong>Yoga Business and Marketing Success:</strong> Develop a successful marketing Mindset to launch and boost your business.  Follow a clear, stepwise plan to market your business on Facebook, Instagram and YouTube.  Top tips and guidance for choosing equipment and using technology</li>
+            <li><strong>Yoga Business and Marketing Success:</strong> Develop a successful marketing Mindset to launch and boost your business.  Follow a clear, stepwise plan to market your business on Social Media.  Top tips and guidance for choosing equipment and using technology</li>
         </ol>
     </div>
     <div class="container">
-        <h1 class="text-center"><strong>In our self-paced, interactive yoga learning portal you will find</strong></h1>
+        <h1 class="text-center"><strong>Discover in our self-paced, interactive yoga learning portal</strong></h1>
         <ul class="yto-font-size">
             <li>Pre-recorded videos: practices and lectures with expert tuition and demonstration</li>
             <li>Audios: guided relaxations, meditations, mantras, and recorded yoga texts with commentaries</li>
@@ -87,13 +87,13 @@
             <li>Quizzes and activities, digitalised, state-of-the-art tools for individual feedback</li>
             <li>Monthly Zoom (2 hours+) session, to connect with the Lead Trainers on completion of each Module, for practical assessments, Q&amp;A and small group coaching</li>
         </ul><center><img class="img-responsive" src="https://res.cloudinary.com/shamayoga/image/upload/v1609948925/300time.svg"></center>
-        <p class="lead text-center yto-font-size"><em>You can use any device to access our user-friendly yoga learning portal, including smartphone, tablet, laptop or desktop computer.&nbsp;&nbsp;Enjoy lifetime access to the course content.</em><br></p>
+        <p class="lead text-center yto-font-size"><em>To access our user-friendly yoga learning portal you can use tablet, laptop or desktop computer.&nbsp;&nbsp;Enjoy lifetime access to the course content.</em><br></p>
     </div>
 
     <div class="container">
-        <h1 class="text-center text-danger"><strong>Bonuses </strong>*over £300 value – Free!*</h1>
+        <h1 class="text-center text-danger"><strong>Complimentary Bonuses </strong></h1>
         <ul class="yto-font-size">
-            <li>Free access to extra Shamayoga classes, podcasts, workshops, and webinars<strong><em>.</em></strong></li>
+            <li>Free access to extra Shamayoga workshops<strong><em>.</em></strong></li>
             <li>A downloadable, original, royalty-free, ambient music album creating the perfect atmosphere for your yoga practice or teaching session.</li>
             <li>Handy links to online resources</li>
         </ul>
@@ -103,18 +103,19 @@
       
     </div>
     <div class="container">
-        <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong>Forever Support from our Community</strong></h1>
-        <p class="yto-font-size">You can join our exclusive Shamayoga YA300 Facebook support community and connect with other students.&nbsp; Yoga is more than a practice. It’s a way of life and we are with you all the way.</p>
+        <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong>join our Community</strong></h1>
+        <p class="yto-font-size">You can join our exclusive Shamayoga YA300 Teach Your Yoga support community and connect with other students.&nbsp; Yoga is more than a practice. It’s a way of life and we are with you all the way.</p>
     </div>
     <div class="container">
-        <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong>Who is Shamayoga certificated 300 hrs online Yoga Teacher Training for?&nbsp;</strong><br></h1>
+        <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong>Who is 300 hrs online Yoga Teacher Training for?&nbsp;</strong><br></h1>
         <ul class="sychunky yto-font-size">
+          <li><strong>Experienced yoga practitioners</strong>, including those who wish to deepen their practice and understanding of yoga without necessarily wanting to teach.</li>
             <li><strong>200 hrs yoga teachers</strong>. On completion you will be able to apply for Yoga Alliance for 500 RYT (200 + 300 hrs).&nbsp;</li>
             <li><strong>Experienced yoga practitioners</strong>, including those who do not necessarily wish to teach.&nbsp;&nbsp;</li>
             <li><strong>Qualified holistic arts practitioners who are also experienced yoga practitioners</strong> including pilates, dance and martial arts.</li>
         </ul>
         <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong><em>Whatever your yoga style and previous training, you are warmly welcomed</em></strong><em>.</em><br></h1>
-        <p class="yto-font-size">Complete the course within 12 months or take up to 3 years!&nbsp;<br></p>
+        <center><p class="yto-font-size">Complete the course within 12 months or take up to 3 years!&nbsp;<br></p></center>
         <p class="yto-font-size">You will have instant access to the training upon purchase, so you may start immediately.&nbsp; Just login to our learning portal and go to step one on the training spiral.<br></p>
         <p class="yto-font-size">Set the pace of your own learning by progressing stepwise through the 12 modules of our training spiral. Each module of approximately 25 hours is divided into 8 study categories.<br></p>
         <p class="yto-font-size">300 hours Yoga Alliance certification is awarded upon completion.<br></p>
