--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -66,7 +66,7 @@
     <div class="container centre-block"><img src="https://res.cloudinary.com/shamayoga/image/upload/v1613653516/trio-1.png"></div>
     <div class="container center-block yto-font-size">
     <h1 style="text-align:center;"><strong>8 study categories presented in 12 modules</strong></h1>
-        <ol class="yto-font-size categories-list" style="padding-bottom: ">
+        <ol class="yto-font-size categories-list">
             <li><strong>Hatha Yoga Pradipika:</strong> In theory and practice, the foundational text and transcendent teachings of the HYP – the authentic, traditional Hatha Yoga style</li>
             <li><strong>Mind Keys:</strong> A fascinating exploration of yoga techniques, mantra, mindfulness and self-hypnosis.  Discover tools to master your subconscious mind.</li>
             <li><strong>Six Namaskars:</strong> Original yoga dances, flowing sequenced movements and postures to integrate mind, body, feeling and breath.  Accessible to all, dance becomes yoga and yoga becomes dance. Meditations in movement.</li>
@@ -79,7 +79,7 @@
     </div>
     <div class="container">
         <h1 class="text-center"><strong>Discover in our self-paced, interactive yoga learning portal</strong></h1>
-        <ul class="yto-font-size">
+        <ul class="yto-font-size categories-list">
             <li>Pre-recorded videos: practices and lectures with expert tuition and demonstration</li>
             <li>Audios: guided relaxations, meditations, mantras, and recorded yoga texts with commentaries</li>
             <li>Course notes including supporting references</li>
