Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -95,7 +95,7 @@
 
     <div class="container">
         <h1 class="text-center text-danger"><strong>Complimentary Bonuses </strong></h1>
-        <ul class="yto-font-size">
+        <ul class="yto-font-size categories-list">
             <li>Free access to extra Shamayoga workshops<strong><em>.</em></strong></li>
             <li>A downloadable, original, royalty-free, ambient music album creating the perfect atmosphere for your yoga practice or teaching session.</li>
             <li>Handy links to online resources</li>
