Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -111,7 +111,7 @@
     </div>
     <div class="container">
         <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong>Who is 300 hrs online Yoga Teacher Training for?&nbsp;</strong><br></h1>
-        <ul class="sychunky yto-font-size">
+        <ul class="sychunky yto-font-size categories-list">
           <li><strong>Experienced yoga practitioners</strong>, including those who wish to deepen their practice and understanding of yoga without necessarily wanting to teach.</li>
             <li><strong>200 hrs yoga teachers</strong>. On completion you will be able to apply for Yoga Alliance for 500 RYT (200 + 300 hrs).&nbsp;</li>
             <li><strong>Experienced yoga practitioners</strong>, including those who do not necessarily wish to teach.&nbsp;&nbsp;</li>
