Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -123,7 +123,7 @@
         <p class="yto-font-size">Set the pace of your own learning by progressing stepwise through the 12 modules of our training spiral. Each module of approximately 25 hours is divided into 8 study categories.<br></p>
         <p class="yto-font-size">300 hours Yoga Alliance certification is awarded upon completion.<br></p>
         <p class="yto-font-size"><strong>Lead Trainers: Steve Avian(<a href="https://www.shamayoga.org.uk/steve-avian/">Bio</a>) and Susan McHale(<a href="https://www.shamayoga.org.uk/susan-mchale/">Bio</a>)</strong></p>
-        <p class="yto-font-size"><strong>Contributing Trainers: Katie Dickinson and Olivia Lester</strong></p>
+        <p class="yto-font-size"><strong>Contributing Trainers: Katie Dickinson(<a href="https://www.shamayoga.org.uk/katie-dickinson/">Bio</a>) and Olivia Lester</strong></p>
     </div>
     <div>
       <strong><h4>Testimonials from Students who have Studied with Shamayoga</h4></strong>
