Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -140,8 +140,8 @@ delivered with his quiet, wry sense of humour.” Karen Myers 2020</blockquote>
       <blockquote class="blockquote">“Thank you for everything - it has been such a wonderful journey that I am so glad I embarked on!”  Anna 2020</blockquote>
     </div>
     <center><div class="container" style="max-width:600px;text-align:center;">
-        <p class="yto-font-size">Tuition fees:&nbsp; <strong class="yto-font-size" style="color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;">£900</strong><br></p>
-        <p>Look out for the "PayPal Credit" offers which allow you to delay payment while accessing the course from day 1.</p>
+        <p class="yto-font-size">Tuition fees:&nbsp; Was £1200. Now <strong class="yto-font-size" style="color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;">£900</strong><br></p>
+        <p>Instalments may be paid using 'PayPal Credit' whilst accessing the course from day one.</p>
         <p><div id="smart-button-container">
       <div style="text-align: center;">
         <div id="paypal-button-container"></div>
