Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -144,9 +144,15 @@ delivered with his quiet, wry sense of humour.” Karen Myers 2020</blockquote>
         <p>Instalments may be paid using 'PayPal Credit' whilst accessing the course from day one.</p>
         <p><div id="smart-button-container">
       <div style="text-align: center;">
-        <div id="paypal-button-container"></div>
+        <div class="paypal-button-container"></div>
       </div>
     </div>
+    </p>
+
+    </div>
+    
+</div>
+</center>
   <script src="https://www.paypal.com/sdk/js?client-id=AWjTZWMJP2zHjDVVg7X0Mbbf-g0hrJH2JfL4qSBkmKyp4jEhqfiBVN2Xn9l5ydg5zskeAIXewIdBwmCJ&currency=GBP" data-sdk-integration-source="button-factory"></script>
   <script>
     function initPayPalButton() {
@@ -174,15 +180,10 @@ delivered with his quiet, wry sense of humour.” Karen Myers 2020</blockquote>
         onError: function(err) {
           console.log(err);
         }
-      }).render('#paypal-button-container');
+      }).render('.paypal-button-container');
     }
     initPayPalButton();
-  </script></p>
-
-    </div>
-    
-</div>
-</center>
+  </script>
     </div>
     </div>
     <div class="main section" id="main"><div class="widget Blog" data-version="1" id="Blog1">
