Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -77,6 +77,20 @@
             <li><strong>Yoga Business and Marketing Success:</strong> Develop a successful marketing Mindset to launch and boost your business.  Follow a clear, stepwise plan to market your business on Social Media.  Top tips and guidance for choosing equipment and using technology</li>
         </ol>
     </div>
+        <center><div class="container" style="max-width:600px;text-align:center;">
+        <p class="yto-font-size">Tuition fees:&nbsp; Was £1200. Now <strong class="yto-font-size" style="color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;">£900</strong><br></p>
+        <p>Instalments may be paid using 'PayPal Credit' whilst accessing the course from day one.</p>
+        <p><div id="smart-button-container">
+      <div style="text-align: center;">
+        <div class="paypal-button-container"></div>
+      </div>
+    </div>
+    </p>
+
+    </div>
+    
+</div>
+</center>
     <div class="container">
         <h1 class="text-center"><strong>Discover in our self-paced, interactive yoga learning portal</strong></h1>
         <ul class="yto-font-size categories-list">
