--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -132,6 +132,7 @@
             <li><strong>Qualified holistic arts practitioners who are also experienced yoga practitioners</strong> including pilates, dance and martial arts.</li>
         </ul>
         <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong><em>Whatever your yoga style and previous training, you are warmly welcomed</em></strong><em>.</em><br></h1>
+        <img src="https://res.cloudinary.com/shamayoga/image/upload/v1613924296/trio4.jpg"/>
         <center><p class="yto-font-size">Complete the course within 12 months or take up to 3 years!&nbsp;<br></p></center>
         <p class="yto-font-size">You will have instant access to the training upon purchase, so you may start immediately.&nbsp; Just login to our learning portal and go to step one on the training spiral.<br></p>
         <p class="yto-font-size">Set the pace of your own learning by progressing stepwise through the 12 modules of our training spiral. Each module of approximately 25 hours is divided into 8 study categories.<br></p>
