--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -63,7 +63,7 @@
         <h1 style="text-align: center;">Take your love for yoga to the next level</h1>
         <p class="yto-font-size">Our direct and practical online training is designed to help you develop as a professional yoga teacher and expand your teaching repertoire.&nbsp;Set the pace of your own learning and integrate the content with your home practice and teaching sessions.</p>
     </div>
-    <div class="container centre-block"><img src="https://res.cloudinary.com/shamayoga/image/upload/v1613653516/trio-1.png"></div>
+    <div class="container centre-block"><img src="https://res.cloudinary.com/shamayoga/image/upload/v1613923114/trio3.jpg"></div>
     <div class="container center-block yto-font-size">
     <h1 style="text-align:center;"><strong>8 study categories presented in 12 modules</strong></h1>
         <ol class="yto-font-size categories-list">
