--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -134,7 +134,7 @@
         <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong><em>Whatever your yoga style and previous training, you are warmly welcomed</em></strong><em>.</em><br></h1>
         <img src="https://res.cloudinary.com/shamayoga/image/upload/v1613924503/trio4.jpg?2"/>
         <div style="line-height:1.5em;">
-        <center><p class="yto-font-size">Complete the course within 12 months or take up to 3 years!&nbsp;<br></p></center>
+        <center><h4>Complete the course within 12 months or take up to 3 years!&nbsp;</h4></center>
         <p class="yto-font-size">You will have instant access to the training upon purchase, so you may start immediately.&nbsp; Just login to our learning portal and go to step one on the training spiral.<br></p>
         <p class="yto-font-size">Set the pace of your own learning by progressing stepwise through the 12 modules of our training spiral. Each module of approximately 25 hours is divided into 8 study categories.<br></p>
         <p class="yto-font-size"> 300 hours <img src="https://res.cloudinary.com/shamayoga/image/upload/h_50/v1613922478/YA.png"/> Yoga Alliance certification is awarded upon completion.<br></p>
