Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -134,7 +134,7 @@
         <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong><em>Whatever your yoga style and previous training, you are warmly welcomed</em></strong><em>.</em><br></h1>
         <img src="https://res.cloudinary.com/shamayoga/image/upload/v1613924503/trio4.jpg?2"/>
         <div style="line-height:1.5em;">
-        <center><h4>Complete the course within 12 months or take up to 3 years!&nbsp;</h4></center>
+        <center><h2>Complete the course within 12 months or take up to 3 years!&nbsp;</h2></center>
         <p class="yto-font-size">You will have instant access to the training upon purchase, so you may start immediately.&nbsp; Just login to our learning portal and go to step one on the training spiral.<br></p>
         <p class="yto-font-size">Set the pace of your own learning by progressing stepwise through the 12 modules of our training spiral. Each module of approximately 25 hours is divided into 8 study categories.<br></p>
         <p class="yto-font-size"> 300 hours <img src="https://res.cloudinary.com/shamayoga/image/upload/h_50/v1613922478/YA.png"/> Yoga Alliance certification is awarded upon completion.<br></p>
@@ -143,7 +143,7 @@
         </div>
     </div>
     <div>
-      <strong><h4>Testimonials from Students who have Studied with Shamayoga</h4></strong>
+      <center><h2>Testimonials from Students who have Studied with Shamayoga</h2></center>
       <blockquote class="blockquote">“I completed my 200 hour YTT online with Shamayoga and can thoroughly recommend Shamayoga and the Lead Trainer, Steve Avian.  Steve's devotion to the practice of yoga and the philosophies surrounding it were obvious to me from the outset, and throughout the course his ethical integrity was crystal clear.  He inspires his yoga students and encourages them to explore their own yoga journey whilst supporting them in a nurturing way and his knowledge surrounding yoga is deep and plentiful.  I gained so much more from my tuition with Steve than I ever thought possible, and it is through him and his teaching that I have begun what I hope will be a journey in yoga where I may inspire others in the same way that he has inspired me.   I wouldn't hesitate to take another of Steve's courses because he teaches in such a natural and inspiring way and he brings yoga alive.” Alison 2020</blockquote>
       <blockquote class="blockquote">“Steve, Susan, just want to say a personal thank you to you both, for your support over the last year.  I’ve learned a lot and the course has sparked my interest in a variety of paths that I’d never thought of a year ago. Parts of the course have pulled me towards things like chanting and mantras.  I really enjoyed doing this.  I learnt a lot with Steve, his knowledge is wide ranging, even now after my teacher training has finished, I find myself thinking, ‘I get it, that’s what Steve was saying’.    One of the key things is his authenticity, he shares and teaches from his own experience, which sets his courses apart from others.  His classes are well balanced and are 
 
