Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -60,7 +60,7 @@
     </div>
     
     <div class="container yto-font-size">
-        <h1 style="text-align: center;">Take your love for yoga to the next level</h1>
+        <h1 style="text-align: center;font-weight:900;">Take your love for yoga to the next level</h1>
         <p class="yto-font-size">Our direct and practical online training is designed to help you develop as a professional yoga teacher and expand your teaching repertoire.&nbsp;Set the pace of your own learning and integrate the content with your home practice and teaching sessions.</p>
     </div>
     <div class="container centre-block"><img src="https://res.cloudinary.com/shamayoga/image/upload/v1613923114/trio3.jpg"></div>
