Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -132,7 +132,7 @@
             <li><strong>Qualified holistic arts practitioners who are also experienced yoga practitioners</strong> including pilates, dance and martial arts.</li>
         </ul>
         <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong><em>Whatever your yoga style and previous training, you are warmly welcomed</em></strong><em>.</em><br></h1>
-        <img src="https://res.cloudinary.com/shamayoga/image/upload/v1613924503/trio4.jpg?2"/>
+        <img src="https://res.cloudinary.com/shamayoga/image/upload/v1613927870/trio5.jpg"/>
         <div style="line-height:1.5em;">
         <center><h2>Complete the course within 12 months or take up to 3 years!&nbsp;</h2></center>
         <p class="yto-font-size">You will have instant access to the training upon purchase, so you may start immediately.&nbsp; Just login to our learning portal and go to step one on the training spiral.<br></p>
