Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -120,7 +120,7 @@
       
     </div>
     <div class="container">
-        <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong>join our Community</strong></h1>
+        <h1 class="text-center text-danger" style="color: rgb(0,0,0);"><strong>Join our Community</strong></h1>
         <p class="yto-font-size">You can join our exclusive Shamayoga YA300 Teach Your Yoga support community and connect with other students.&nbsp; Yoga is more than a practice. It’s a way of life and we are with you all the way.</p>
     </div>
     <div class="container">
