--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -138,8 +138,8 @@
         <p class="yto-font-size">You will have instant access to the training upon purchase, so you may start immediately.&nbsp; Just login to our learning portal and go to step one on the training spiral.<br></p>
         <p class="yto-font-size">Set the pace of your own learning by progressing stepwise through the 12 modules of our training spiral. Each module of approximately 25 hours is divided into 8 study categories.<br></p>
         <center><p class="yto-font-size">&nbsp; <img src="https://res.cloudinary.com/shamayoga/image/upload/h_50/v1613922478/YA.png"/> 300 hours Yoga Alliance certification is awarded upon completion.<br></p>
-        <p class="yto-font-size"><strong>Lead Trainers: Steve Avian(<a href="https://www.shamayoga.org.uk/steve-avian/">Bio</a>) and Susan McHale(<a href="https://www.shamayoga.org.uk/susan-mchale/">Bio</a>)</strong></p>
-        <p class="yto-font-size"><strong>Contributing Trainers: Katie Dickinson(<a href="https://www.shamayoga.org.uk/katie-dickinson/">Bio</a>) and Olivia Lester</strong></p></center>
+        <p class="yto-font-size"><strong>Lead Trainers: Steve Avian(<a href="https://www.shamayoga.org.uk/steve-avian/">Bio</a>) and Susan McHale(<a href="https://www.shamayoga.org.uk/susan-mchale/">Bio</a>)
+        <br/>Contributing Trainers: Katie Dickinson(<a href="https://www.shamayoga.org.uk/katie-dickinson/">Bio</a>) and Olivia Lester</strong></p></center>
         </div>
     </div>
     <div>
