Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -78,7 +78,7 @@
         </ol>
     </div>
         <center><div class="container" style="max-width:600px;text-align:center;">
-        <p class="yto-font-size">Tuition fees:&nbsp; Was £1200. Now <strong class="yto-font-size" style="color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;">£900</strong><br></p>
+        <p class="yto-font-size">Tuition fees:&nbsp; Limited time offer: Was £1200. Now <strong class="yto-font-size" style="color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;">£900</strong><br></p>
         <p>Instalments may be paid using 'PayPal Credit' whilst accessing the course from day one.</p>
         <p><div id="smart-button-container">
       <div style="text-align: center;">
@@ -139,7 +139,7 @@
         <p class="yto-font-size">Set the pace of your own learning by progressing stepwise through the 12 modules of our training spiral. Each module of approximately 25 hours is divided into 8 study categories.<br></p>
         <center><p class="yto-font-size">&nbsp; <img src="https://res.cloudinary.com/shamayoga/image/upload/h_50/v1613922478/YA.png"/> 300 hours Yoga Alliance certification is awarded upon completion.<br></p>
         <p class="yto-font-size"><strong>Lead Trainers: Steve Avian(<a href="https://www.shamayoga.org.uk/steve-avian/">Bio</a>) and Susan McHale(<a href="https://www.shamayoga.org.uk/susan-mchale/">Bio</a>)
-        <br/>Contributing Trainers: Katie Dickinson(<a href="https://www.shamayoga.org.uk/katie-dickinson/">Bio</a>) and Olivia Lester</strong></p></center>
+        <br/>Contributing Trainers: Katie Dickinson(<a href="https://www.shamayoga.org.uk/katie-dickinson/">Bio</a>)</strong></p></center>
         </div>
     </div>
     <div>
@@ -157,7 +157,7 @@ delivered with his quiet, wry sense of humour.” Karen Myers 2020</blockquote>
       <blockquote class="blockquote">“Thank you for everything - it has been such a wonderful journey that I am so glad I embarked on!”  Anna 2020</blockquote>
     </div>
     <center><div class="container" style="max-width:600px;text-align:center;">
-        <p class="yto-font-size">Tuition fees:&nbsp; Was £1200. Now <strong class="yto-font-size" style="color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;">£900</strong><br></p>
+        <p class="yto-font-size">Tuition fees:&nbsp; Limited time offer: Was £1200. Now <strong class="yto-font-size" style="color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;">£900</strong><br></p>
         <p>Instalments may be paid using 'PayPal Credit' whilst accessing the course from day one.</p>
         <p><div id="smart-button-container">
       <div style="text-align: center;">
