Updated 'teacher-training-online/index.html' via CloudCannon

--- a/teacher-training-online/index.html
+++ b/teacher-training-online/index.html
@@ -78,7 +78,7 @@
         </ol>
     </div>
         <center><div class="container" style="max-width:600px;text-align:center;">
-        <p class="yto-font-size">Tuition fees:&nbsp; Limited time offer: Was £1200. Now <strong class="yto-font-size" style="color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;">£900</strong><br></p>
+        <h2 class="yto-font-size">Tuition fees:&nbsp; Limited time offer: Was £1200. Now <strong class="yto-font-size" style="color: rgb(216, 22, 59);text-shadow: 2px 2px #fbdc95;">£900</strong><br></h2>
         <p>Instalments may be paid using 'PayPal Credit' whilst accessing the course from day one.</p>
         <p><div id="smart-button-container">
       <div style="text-align: center;">
